@@ -1,8 +1,8 @@
 Package: InSilicoVA
 Type: Package
 Title: Probabilistic Verbal Autopsy Coding with 'InSilicoVA' Algorithm
-Version: 1.2.5
-Date: 2018-10-12
+Version: 1.2.6
+Date: 2018-10-23
 Author: Zehang Li, Tyler McCormick, Sam Clark
 Maintainer: Zehang Li <lizehang@gmail.com>
 Depends: R (>= 2.15.0), rJava, coda, ggplot2, InterVA5
@@ -10,4 +10,4 @@ Description: Computes individual causes of death and population cause-specific m
 License: GPL-2
 URL: https://github.com/verbal-autopsy-software/InSilicoVA
 BugReports: https://github.com/verbal-autopsy-software/InSilicoVA/issues
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.0
